# rusty_videocamera

./: .gitignore  Cargo.toml  README.md  flashDfu-util.sh  objcopyGD32.sh
src/: main.rs
