[package]
name = "rusty_videocamera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gd32vf103xx-hal = "0.4.0"
embedded-hal = "0.2.3"
longan-nano = {version = "0.3.0", features = ["lcd"]}
riscv = "0.7.0"
riscv-rt = "0.8.0"
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"